--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <title>Решатель Судоку</title>
+  <title>Sudocu</title>
   <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body>
-  <h1>Решатель Судоку</h1>
+  <h1>Sudocu Solver</h1>
   <form id="sudoku-form">
     <div id="sudoku-grid">
-
-      <!-- Здесь будут ячейки судоку -->
-      <!-- Генерация через JavaScript для упрощения -->
     </div>
-    <button type="button" onclick="solveSudoku()">Решить</button>
+    <button type="button" onclick="solveSudoku()">Solve</button>
   </form>
   <script src="static/sudocu_java.js"></script>
 </body>
