--- a/static/style.css
+++ b/static/style.css
@@ -24,14 +24,15 @@ h1 {
 }
 
 #sudoku-form {
+  width: auto;
+  height: auto;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  padding: 20px;
   background-color: var(--grid-background);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
 }
 
 #sudoku-grid {
@@ -40,10 +41,12 @@ h1 {
   grid-template-rows: repeat(9, 50px);
   gap: 2px;
   background-color: var(--grid-background);
-  padding: 10px;
-  border-radius: 8px;
+  padding: 1px;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+  border: 3px solid #000000;
 }
+
+
 
 #sudoku-grid input {
   width: 100%;
@@ -51,14 +54,14 @@ h1 {
   text-align: center;
   font-size: 20px;
   border: 1px solid var(--cell-border-color);
-  border-radius: 4px;
   background-color: #fff;
   transition: background-color 0.3s;
+  padding: 0px;
 }
 
 #sudoku-grid input:focus {
   outline: none;
-  background-color: var(--cell-focus-color);
+  background-color: lightblue;
   border-color: var(--button-color);
 }
 
@@ -76,3 +79,7 @@ button {
 button:hover {
   background-color: var(--button-hover-color);
 }
+
+#sudoku-grid input.highlight {
+    background-color: rgb(227, 236, 243);
+  }
