--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Sudocu</title>
+  <title>Sudoku</title>
   <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body>
-  <h1>Sudocu Solver</h1>
+  <h1>Sudoku Solver</h1>
   <form id="sudoku-form">
     <div id="sudoku-grid">
     </div>
     <button type="button" onclick="solveSudoku()">Solve</button>
   </form>
-  <script src="static/sudocu_java.js"></script>
+  <script src="static/sudoku_java.js"></script>
 </body>
 
 </html>
