finishing with the cosw part

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
     <div id="sudoku-grid">
     </div>
     <button type="button" onclick="solveSudoku()">Solve</button>
+    
+    <button type="button" onclick="checkSudoku()">Check</button>
+
   </form>
   <script src="static/sudoku_java.js"></script>
 </body>
